bad/assign_var_class_array.example_compiler_output
ERROR
[1mbad/assign_var_class_array.lat:7:4: [1;31merror: [0;1massigning to `Y` from incompatible type `int[]`[m
	x = new int[3];
	  [1;32m^[m
